--- a/HeartOfGold/Views/Help/Index.cshtml
+++ b/HeartOfGold/Views/Help/Index.cshtml
@@ -10,7 +10,7 @@
 
     <div>
         <p class="lead">
-            Welcome! If you're a student, please read below for a Quick Start guide on how to get started.
+            Welcome! Please read below for a Quick Start guide on how to get started.
         </p>
     </div>
     <div>
@@ -57,43 +57,7 @@
 
     </div>
     <hr />
-    @*<div class="panel panel-default">
-            <div class="panel-heading">What exactly is Heart of Gold?</div>
-            <div class="panel-body">
-                It is a free-to-use platform for students within the School of ICT at Nelson Mandela University. Students who are disadvantaged can submit a request for items they are in need of.
-            </div>
-        </div>
-
-        <div class="panel panel-default">
-            <div class="panel-heading">How many requests am I allowed to submit?</div>
-            <div class="panel-body">
-                <strong>Two</strong> requests per day. However, exceptions can be made under special circumstances.
-            </div>
-        </div>
-
-        <div class="panel panel-default">
-            <div class="panel-heading">Who can donate to the students?</div>
-            <div class="panel-body">
-                Anyone who wants to!
-            </div>
-        </div>
-
-        <div class="panel panel-default">
-            <div class="panel-heading">How do I know what is happening with my submitted request?</div>
-            <div class="panel-body">
-                At the top of the web page, click on <strong>Student Requests</strong>. Then, select <strong>View My Requests</strong>. The status and progress of your request will be shown here!
-            </div>
-        </div>
-
-        <div class="panel panel-default">
-            <div class="panel-heading">I am still confused about a few things. Who can I contact?</div>
-            <div class="panel-body">
-                You are welcome to contact the website administrator at heartadmin@mandela.ac.za.
-            </div>
-        </div>*@
 </div>
-
-
 
 @section Scripts
 {
