--- a/HeartOfGold/Views/Home/Index.cshtml
+++ b/HeartOfGold/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
         <div class="col-md-4">
             <div class="panel panel-default home-panel" style="height:200px;">
                 <h4>Interested in donating?</h4>
-                <p class="lead home-panel-p">Contact the Heart of Gold administrator by sending an email to admin@hog.co.za.</p>
+                <p class="lead home-panel-p">Contact the Heart of Gold administrator by sending an email to heart.of.gold.mandela@gmail.com</p>
             </div>
         </div>
         <div class="col-md-4">
