--- a/HeartOfGold/Views/Home/About.cshtml
+++ b/HeartOfGold/Views/Home/About.cshtml
@@ -16,14 +16,22 @@
 
 <br />
 
-<p>
-    Lorem ipsum dolor sit amet, praesent fusce ut id cursus morbi. Enim viverra arcu congue, a urna sit ut sem, massa conubia nullam augue integer elit, mattis lacus dictumst tortor enim in. Aliquam vulputate velit litora vitae, in arcu mi adipiscing, aut bibendum mauris nobis libero libero nunc, sit quis et ac eu adipiscing, mauris ante pellentesque suspendisse suspendisse saepe nec. In cum ullamcorper nisl est id, arcu aliquam phasellus, hymenaeos eu consectetuer sem nonummy pede. Sed in, nisl nulla sed molestiae ipsum lacus egestas, sit diam posuere, aenean minima vel ligula sapien elementum. Maecenas aliquam quam ut ultrices est, mauris vel ac aenean, vivamus dolor sapien diam tempus vestibulum, erat convallis suspendisse porttitor eget in. Risus suspendisse in sit risus porta, in lorem leo penatibus, etiam quis etiam dictumst est, neque amet. Ut pharetra, volutpat explicabo massa lorem, per arcu risus nulla quis, amet est ante nunc libero et nec, nam nulla facilisi sed consectetuer lorem. Mattis elementum hendrerit convallis. Molestie et donec, eros ultricies felis.
+<div class="container">
+    <p class="lead" style="text-align:justify">
+        The word <strong>Ubuntu</strong> is something we often hear as South Africans. But what exactly does it mean for people of the country? The word Ubuntu itself loosely means "humanity", however common interpretations include "I am because we are", and "humanity towards others".
 
-    Lobortis turpis pretium turpis id vestibulum, interdum cras tincidunt nulla elit, libero leo lectus ipsum eu amet, diam elit vel justo. Donec pede urna gravida sed cras wisi, aliquam lobortis, vulputate nec justo augue donec, rhoncus volutpat vitae sed nisl ante adipiscing, sit sodales venenatis. Amet adipiscing wisi nulla, euismod ut enim congue, nisl neque nunc id non at vel, varius curabitur dictum. Posuere urna in purus etiam consectetuer mus, vitae quis wisi molestie, ac maecenas dolor, accusamus bibendum non in sit mauris. Est nobis risus, suscipit in sed sapien. Dignissim torquent consequuntur justo. Pellentesque vitae molestie tempor eu justo magna, porttitor est vel tristique sit adipiscing, turpis ipsum vestibulum malesuada vestibulum vestibulum turpis, metus perferendis et pede rutrum sociosqu fusce, netus vel ut urna sed commodo ut.
+        Okay, I understand what the definition of the word is now. What's the big deal?
+        <br />
+        <br />
+        South Africa is a country of many cultures and traditions, and is incredibly diverse. We are fortunate enough to have people from a wide range of races, colours, and nationalities.
+        <br />
+        <br />
+        How does Ubuntu tie in to South Africa? Despite it's beauty, South Africa suffers from many fundamental issues, including: poverty, crime, corruption, and low standards of education to name a few. This is where Ubuntu can make a difference: we need to treat each other as equals and prioritise humanity. Ubuntu is equally about behaviour as it is about a philosophy and a mindset. We must all practice what we preach, and take action to actually help out our fellow South Africans.
+        <br />
+        <br />
+        <h4>How is Heart of Gold going to help?</h4>
+    </p>
+</div>
 
-    Vitae sed ultricies maecenas egestas sollicitudin a, rutrum ornare elementum nonummy aliquet vitae, autem eget vestibulum nullam aliquam. Bibendum erat, tincidunt in, tellus nascetur interdum. Tempor enim fusce nunc laoreet iaculis pharetra. Orci tortor at pharetra vestibulum viverra, laoreet id, semper amet id ullamcorper doloribus mauris. Dolor nam purus mi pellentesque, morbi rutrum quam ornare vel ligula erat, commodo et, vestibulum sollicitudin eu, mauris id pellentesque ac aliquam accumsan. A congue lectus quam nulla velit, elit ac nulla sodales vel, nulla vitae wisi accumsan lobortis. Metus facilisi ac, pellentesque non amet convallis. Lacus praesent, nulla quis integer vel, turpis nullam. Fusce magna fringilla. Lacus felis phasellus, nascetur suscipit nulla sed montes, metus tincidunt orci tellus adipiscing aliquam vestibulum, ipsum ac at magna. Ante nisl amet lobortis dui turpis commodo, volutpat eget accumsan vestibulum fermentum laoreet, mollis id porttitor tellus cras etiam semper, duis nulla orci ipsum, etiam cursus eget risus vel. Augue at fermentum metus, dolor justo ut modi nulla, donec nulla purus euismod quis eu.
-
-    Sed erat ultricies. Metus rhoncus dolor tincidunt. Dictum netus wisi et. Pellentesque justo, ipsum in, convallis tincidunt natoque mi molestie commodo lacinia, magna proin felis sed nisl tellus, et a diam massa phasellus id. Velit mollis dictumst, libero a scelerisque nec aenean, nunc dapibus vehicula sed, semper ipsum odio at et vestibulum in. Proin at vulputate pede erat. Adipiscing ut maecenas a ipsum ut sodales, sint eu, imperdiet consequuntur arcu urna morbi wisi. Odio ac dolor adipiscing vestibulum.
-</p>
 
 <hr />
