--- a/HeartOfGold/Views/Scheduler/Index.cshtml
+++ b/HeartOfGold/Views/Scheduler/Index.cshtml
@@ -7,7 +7,7 @@
 <hr />
 
 @* http://www.dotnetawesome.com/2017/06/event-calendar-in-aspnet-mvc.html
-  The above article/tutorial was followed to implement the scheduler  
+    The above article/tutorial was followed to implement the scheduler
 *@
 
 <div id="scheduler"></div>
@@ -18,11 +18,11 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title"><span id="eventTitle"></span></h4>
-                <hr style="margin:5px;"/>
+                <hr style="margin:5px;" />
             </div>
-            <div class="modal-body">               
-                    <p id="eventDetails"></p>
-           </div>
+            <div class="modal-body">
+                <p id="eventDetails"></p>
+            </div>
             <div class="modal-footer">
                 <hr style="margin:10px;" />
                 <button id="btnDeleteEvent" class="btn btn-default">
@@ -52,10 +52,10 @@
             <div class="modal-body">
                 <form class="form-horizontal">
                     <input type="hidden" id="EventID" />
-                    <input type="hidden" id="RequestKey"/>
+                    <input type="hidden" id="RequestKey" />
                     <div class="form-group">
                         <label>Student Number:</label>
-                        <input type="text" id="Subject" class="form-control"/>
+                        <input type="text" id="Subject" class="form-control" />
                     </div>
                     <div class="form-group">
                         <label>Description:</label>
@@ -89,7 +89,6 @@
                         </select>
                     </div>
                     <div class="modal-footer center">
-                        <input id="emailCheck"type="checkbox" name="SendEmail" value="true"/>
                         <button type="button" id="SaveEvent" class="btn btn-default register-button">Save Event</button>
                     </div>
                 </form>
@@ -184,7 +183,7 @@
                             description: '',
                             start: start,
                             end: end,
-                            color: ''                   
+                            color: ''
                         };
                         openEditModal();
                         $('#scheduler').fullCalendar('unselect');
@@ -210,7 +209,7 @@
                         } else {
                             SaveEvent(updatedData);
                         }
-                        
+
                     }
                 })
             }
@@ -243,8 +242,8 @@
                         toastr.warning('End date cannot be before the starting date.');
                         return;
                     }
-                    @* 
-                        moment() gets the current date. Check if we're not trying to create an event in the past...   
+                    @*
+                        moment() gets the current date. Check if we're not trying to create an event in the past...
                     *@
                     if (startDate < moment()) {
                         toastr.warning('Cannot create an event in the past.');
@@ -269,7 +268,7 @@
                     SaveEvent(data);
                     toastr.success('Event created and student notified!');
                 }
-                
+
             });
 
             function SaveEvent(data) {
@@ -280,7 +279,7 @@
                     success: function (data) {
                         if (data.status) {
                              RenderScheduler();
-                             $('#ModalSaveEvent').modal('hide');                            
+                             $('#ModalSaveEvent').modal('hide');
                         }
                     },
                     error: function () {
@@ -314,7 +313,7 @@
                 }
             });
 
-            
+
 
             $('#DatePicker,#DatePicker2').datetimepicker({
                 format: 'DD/MM/YYYY HH:mm A'
@@ -335,4 +334,13 @@
             }
         })
     </script>
+
+    @if (TempData["Successful"] != null)
+    {
+        <script type="text/javascript">
+            $(document).ready(function () {
+                toastr.success('Request processed. You marked it as successful.');
+            });
+        </script>
+    }
 }
